--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.3",
+    "react-toastify": "^11.0.5",
     "sass-embedded": "^1.87.0"
   },
   "devDependencies": {
